Possible fix for image on mobile

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -27,6 +27,10 @@
   /* background: linear-gradient(to left, #ffffff, #fff2cc); */
 }
 
+.headerLogo {
+  object-fit: contain;
+}
+
 .inner {
   height: rem(60px);
   display: flex;
